<resources>
    <string name="app_name">Gestión de Aviones</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_add">Agregar Avión</string>
    <string name="menu_reset">Reiniciar BD</string>
    <string name="dialog_add_airplane">Agregar avion</string>
    <string name="dialog_reset_db">Base de Datos reiniciada</string>
    <string name="dialog_no_implementado">Este método no está implementado en las reservas, borrarías las reservas de otros usuarios.</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="error_campos">Todos los campos son obligatorios</string>
    <string name="error_numero_valido">¡Introduce un número válido!</string>
    <string name="notif_aviones">Notificaciones sobre nuevos aviones</string>
    <string name="avion_agregado1">Nuevo Avión Agregado</string>
    <string name="avion_agregado2">Se ha agregado: </string>
    <string name="nombre_avion">Nombre del Avión </string>
    <string name="edit_avion">Editar Avión </string>
    <string name="clase">Clase</string>
    <string name="tarifa_base">Tarifa base</string>
    <string name="capac_pasajeros">Capacidad de pasajeros</string>
    <string name="num_pasajeros">Número de pasajeros</string>
    <string name="alcance">Alcance</string>
    <string name="nombre">Nombre</string>
    <string name="alcance_km">Alcance en KM</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_volver">Volver</string>
    <string name="clase_text">Es un %1$s.</string>
    <string name="clase_avioneta_text">Es una %1$s.</string>
    <string name="tarifa_text">Tarifa base de: %1$d €.</string>
    <string name="pasajeros_text">%1$d pasajeros.</string>
    <string name="alcance_text">%1$d km de alcance.</string>
    <string name="eliminar">Eliminar</string>
    <string name="menu_reservas">Menú de Reservas</string>
    <string name="reservas_texto">Aquí estarán tus reservas</string>
    <string name="mis_reservas">Todas las Reservas</string>
    <string name="nombre_pasajero">Nombre del Pasajero</string>
    <string name="fecha_reserva">Fecha de la Reserva</string>
    <string name="borrar_avion">Borrar avión</string>
    <string name="confirmar_borrado">Confirmar Borrado</string>
    <string name="confirmar_texto">¿Estás seguro de que quieres borrar este avión?</string>
    <string name="avion_borrado">Avión eliminado</string>
    <string name="texto_siguiente">Las reservas se implementarán más adelante</string>
    <string name="atras_2">Presiona de nuevo para salir de la app</string>
    <string name="email">Tu email aquí</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="ir_a_registro">¿No tienes cuenta? Regístrate</string>
    <string name="ir_a_login">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="perfil_usuario">Mi perfil</string>
    <string name="confirmar_logout">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="redireccion_reservas">Se te redigirá a la pestaña de reservas.</string>
    <string name="email_pasajero">Email del pasajero</string>
    <string name="tu_ubicacion">Tu ubicación</string>
    <string name="error_aeropuertos">Error al seleccionar los aeropuertos</string>
    <string name="aero_origen">Aeropuerto de Origen</string>
    <string name="origen">Origen</string>
    <string name="aero_destino">Aeropuerto de Destino</string>
    <string name="destino">Destino</string>
    <string name="pista_aero_origen">Buscar aeropuerto de origen...</string>
    <string name="pista_aero_destino">Buscar aeropuerto de destino...</string>
    <string name="confirmar_reserva">Confirmar Reserva</string>
    <string name="btn_reserva">Añadir Reserva</string>
    <string name="menu_perfil">Mi perfil</string>
    <string name="editar_foto">Editar foto</string>
    <string name="editar_foto_titulo">Editar foto de perfil</string>
    <string name="elegir_de_galeria">Elegir de galería</string>
    <string name="sacar_foto">Sacar foto</string>
    <string name="distancia">Distancia</string>
    <string name="distancia_hasta">Distancia hasta origen</string>
    <string name="huella">Huella</string>
    <string name="permiso_ubi_denegado">Permiso de ubicación denegado.</string>
    <string name="permiso_gal_denegado">Permiso de galeria denegado.</string>
    <string name="permiso_cam_denegado">Permiso de cámara denegado.</string>
    <string name="reserva_anadida">Reserva añadida correctamente.</string>
    <string name="no_encontrado">No encontrado. Recarga la app.</string>
    <string name="error_imagen">Error al cargar la imagen.</string>
    <string name="num_pax">Num. pax</string>
    <string name="tarifa">Tarifa</string>
    <string name="alcance_con_dospuntos">Alcance</string>
    <string name="campos_obligatorios">Todos los campos son obligatorios.</string>
    <string name="error_act_avion">Error al actualizar el avión.</string>
    <string name="avion_actualizado">Avión actualizado.</string>
    <string name="campo_obligatorio">Este campo es obligatorio.</string>
    <string name="error_login">Error al iniciar sesión.</string>
    <string name="login_correcto">Inicio de sesión correcto.</string>
    <string name="error_registro">Error al registrarse.</string>
    <string name="error_conexion">Error de conexión.</string>
    <string name="completa_campos">Por favor, completa todos los campos.</string>
    <string name="ultima_reserva">Última reserva:</string>
    <string name="cargando">Cargando...</string>
    <string name="registro_correcto">Registro correcto.</string>
</resources>