<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="293dp"
            android:layout_height="154dp"
            android:layout_marginBottom="16sp"
            android:layout_weight="@dimen/material_emphasis_disabled"
            app:srcCompat="@drawable/logo_app" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginBottom="24dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="28dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#2196F3"
            android:text="@string/iniciar_sesion"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvARegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ir_a_registro"
            android:textColor="#2196F3"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
