<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:elevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/nombre_avion"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvClase"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvClase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clase"
            android:textColor="@android:color/darker_gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="189dp" />

        <TextView
            android:id="@+id/tvTarifa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarifa_base"
            android:textSize="10sp"
            tools:layout_editor_absoluteX="252dp"
            tools:layout_editor_absoluteY="2dp" />

        <TextView
            android:id="@+id/tvAlcance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcance_km"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.809"
            app:layout_constraintStart_toEndOf="@+id/tvTarifa"
            tools:layout_editor_absoluteY="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
