<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/selectableItemBackground"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvEmailPasajero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/email_pasajero"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAeroOrigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="aeroOrigen"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvAeroDestino"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toEndOf="@+id/tvEmailPasajero"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAeroDestino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="aeroDestino"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvAvionNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_avion"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvFechaReserva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_reserva"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

</LinearLayout>
